	* src/racoon/proposal.c: don't use NULL pointer (Coverity)
	* src/racoon/pfkey.c: don't use NULL pointer (Coverity)
	* src/racoon/ipsec_doi.c: don't use NULL pointer (Coverity)
	* src/racoon/isakmp.c: don't use NULL pointer (Coverity)
	* src/racoon/oakley.c: don't use NULL pointer (Coverity)
	* src/racoon/admin.c: avoid reusing free'd pointer (Coverity)
	
2006-10-01  Emmanuel Dreyfus  <manu@netbsd.org>
	* src/racoon/isakmp.c: Avoid using NULL pointer (Coverity)
	* src/racoon/ipsec_doi.c: FIx memory leak (Coverity)

2006-09-30  Emmanuel Dreyfus  <manu@netbsd.org>
	* src/racoon/isakmp_agg.c: Remove dead code (Coverity)
	* src/racoon/isakmp_cfg.c: Fix memory leak (Coverity)
	* src/racoon/samples/roadwarrior/client/{phase1-up.sh|phase1-down.sh}:
	  update the scripts for wrorking around routing problems on NetBSD
	* src/racoon/admin.c: Do not free id and key, as they are used later
	* src/racoon/session.c: Reuse existing code for closing IKE sockets,
	  and avoid screwing things by setting p->sock = -1, which is not
	  expected (Coverity).

2006-09-29  Emmanuel Dreyfus  <manu@netbsd.org>
	* src/racoon/racoonctl.c: Fix the previous fix

2006-09-28  Emmanuel Dreyfus  <manu@netbsd.org>
	* src/racoon/racoonctl.c: Fix access after free (Coverity)
	* src/racoon/isakmp_xauth.c: Fix unchecked mallocs (Coverity)

2006-09-26  Emmanuel Dreyfus  <manu@netbsd.org>
	* src/racoon/admin.c: Fix memory leaks in racoonctl (Coverity)
	* src/racoon/admin.c: Remove dead code (Coverity)
	* src/racoon/backupsa.c: Fix memory leak (Coverity)
	* src/racoon/cfparse.y: Fix memory leak (Coverity)

	From Jeff Bailey:
	* src/racoon/{pfkey.c|proposal.c}: fix SA bundle (e.g.: ESP+IPcomp)

	From Matthew Grooms:
	* src/racoon/ipsec_doi.c: fix buffer overflow

2006-09-25  Yvan Vanhullebus  <vanhu@NetBSD.org>
	Reported by Yves-Alexis Perez:
	* src/racoon/isakmp.c: struct ip -> struct iphdr for Linux.

2006-09-15  Emmanuel Dreyfus  <manu@netbsd.org>
	From Matthew Grooms: